--- a/src/app/components/staff/descriptions/descriptions.component.html
+++ b/src/app/components/staff/descriptions/descriptions.component.html
@@ -338,7 +338,7 @@ class="modal" tabindex="-1" role="dialog" [ngClass]="{'show': isModalOpen}" styl
         class="modal-title text-end flex-row-reverse"
         id="staticBackdropLabel"
       >
-         تعديل نوع الصنف
+         تعديل الوصف الوظيفي
       </h5>
     </div>
     <div class="modal-body">
