--- a/src/app/components/stock/categories/cateogries/cateogries.component.html
+++ b/src/app/components/stock/categories/cateogries/cateogries.component.html
@@ -74,7 +74,7 @@
                     <div class="dropdown-menu" [class.show]="isDropdownOpen">
                       <a class="dropdown-item" (click)="openModalForSelected()">تعديل</a>
                       <a class="dropdown-item" href="#">عرض</a>
-                      <a class="dropdown-item" href="#">حدف</a>
+                      <a class="dropdown-item" (click)="deleteItem()">حدف</a>
                     </div>
                   </div>
                 </div>
@@ -1210,10 +1210,10 @@ class="modal" tabindex="-1" role="dialog" [ngClass]="{'show': isModalOpen}" styl
                   <label>يمكن مصروف:</label>
                   <div class="radio-options">
                     <label>
-                      <input type="radio" name="canBeSold" formControlName="canBeSold" value="true"  [(ngModel)]="selectedGender"> true
+                      <input type="radio" name="canBeSold" formControlName="canBeSold" value="true"  [(ngModel)]="selectedGender"> نعم
                     </label>
                     <label>
-                      <input type="radio" name="canBeSold" formControlName="canBeSold" value="false" [(ngModel)]="selectedGender"> false
+                      <input type="radio" name="canBeSold" formControlName="canBeSold" value="false" [(ngModel)]="selectedGender"> لا
                     </label>
                   </div>
                 </div>
@@ -1277,7 +1277,7 @@ class="modal" tabindex="-1" role="dialog" [ngClass]="{'show': isModalOpen}" styl
                 <div class="form-group">
                   <label for="field1 text-end">باركود الصنف</label>
                   <input
-                    type="text"
+                    type="number"
                     id="field1"
                     formControlName="barcode"
                     class="form-control custom-input"
@@ -1911,21 +1911,21 @@ class="modal" tabindex="-1" role="dialog" [ngClass]="{'show': isModalOpen}" styl
                     </div>
                   </div> -->
 
-            <div class="col-md-6 mx-auto">
-              <button type="button my-button3" class="btn my-button3">
-                اضافه
-                <i class="fa-solid fa-plus"></i>
-              </button>
-
-              <button
-                type="button"
-                class="btn closebutton"
-                data-bs-dismiss="modal"
-                (click)="closeModal()"
-              >
-                الغاء
-              </button>
-            </div>
+                  <div class="col-md-6 mx-auto ">
+                    <button type="submit" class="btn my-button3">
+                      حفظ
+                      
+                    </button>
+        
+                    <button
+                      type="button"
+                      class="btn closebutton"
+                      data-bs-dismiss="modal"
+                      (click)="closeModal()"
+                    >
+                      الغاء
+                    </button>
+                    </div>
           </div>
         </form>
       </div>
