--- a/src/app/components/sales/receive-voucher/receive-voucher.component.html
+++ b/src/app/components/sales/receive-voucher/receive-voucher.component.html
@@ -120,35 +120,26 @@
                                             </th>
                                             <th>المندوب</th>
                                             <th>العميل</th>
-                                            <th>تاريخ الانشاء</th>
+                                            <th>المستودع</th>
                                             <th>المنشأ</th>
                                             <th>تاريخ الانشاء</th>
                                             <th class="firstcolright">
-                                                <input type="checkbox" class="large-checkbox" />
+                                                <input type="checkbox" class="large-checkbox mx-1" />
                                             </th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
+                                        <tr *ngFor="let item of goods">
                                             <td> </td>
-                                            <td>Fiona Green</td>
-                                            <td>Chief Operating Officer (COO)</td>
-                                            <td>San Francisco</td>
+                                            <td>{{item.representativeName}}</td>
+                                            <td>{{item.clientName}}</td>
+                                            <td>{{item.warehouseName}}</td>
                                             <td>48</td>
                                             <td>2010/03/11</td>
                                             <td> <input type="checkbox" class="large-checkbox" />
                                             </td>
                                         </tr>
-                                        <tr>
-                                            <td> </td>
-                                            <td>Shou Itou</td>
-                                            <td>Regional Marketing</td>
-                                            <td>Tokyo</td>
-                                            <td>20</td>
-                                            <td>2011/08/14</td>
-                                            <td> <input type="checkbox" class="large-checkbox" />
-                                            </td>
-                                        </tr>
+                                     
                                     </tbody>
                                 </table>
                             </div>
@@ -174,10 +165,10 @@
                 </h5>
             </div>
             <div class="modal-body">
-                <form>
+                <form [formGroup]="goodsForm" (ngSubmit)="onSubmit()">
                     <div class="container">
                         <!-- Row with two fields -->
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="location" class="form-label">المنشأ</label>
@@ -199,25 +190,26 @@
                                         placeholder="قم باختيار التاريخ" />
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="field4 text-end"> رقم الطلب</label>
-                                    <input type="text" id="field3"  class="form-control"
+                                    <input type="text" id="code" formControlName="code"  class="form-control"
                                         placeholder="رقم الطلب" />
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="location" class="form-label">العميل</label>
+                                    <label class="form-label">العميل</label>
                                     <div class="input-group">
-                                        <select class="form-select form-control" id="location">
-                                            <option selected>قم بإختيار العميل</option>
-                                            <option value="1">العميل 1</option>
-                                            <option value="2">العميل 2</option>
-                                            <option value="3">العميل 3</option>
+                                        <select class="form-select form-control custom-input"
+                                            formControlName="clientId">
+                                            <option value="" disabled selected>قم باختيار العميل</option>
+                                            <option *ngFor="let item of clientList" [value]="item.id">{{ item.name }}
+                                            </option>
+
                                         </select>
                                     </div>
                                 </div>
@@ -227,13 +219,14 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label for="location" class="form-label">المندوب</label>
+                                    <label class="form-label">المندوب</label>
                                     <div class="input-group">
-                                        <select class="form-select form-control" id="location">
-                                            <option selected>قم بإختيار المندوب</option>
-                                            <option value="1">المندوب 1</option>
-                                            <option value="2">المندوب 2</option>
-                                            <option value="3">المندوب 3</option>
+                                        <select class="form-select form-control custom-input"
+                                            formControlName="representativeId">
+                                            <option value="" disabled selected>قم باختيار المندوب</option>
+                                            <option *ngFor="let item of representatives" [value]="item.id">{{
+                                                item.userName }}</option>
+
                                         </select>
                                     </div>
                                 </div>
@@ -241,13 +234,13 @@
 
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label for="location" class="form-label">فريق البيع</label>
+                                    <label class="form-label">فريق البيع</label>
                                     <div class="input-group">
-                                        <select class="form-select form-control" id="location">
-                                            <option selected>قم بإختيار العقود</option>
-                                            <option value="1">فريق البيع 1</option>
-                                            <option value="2">فريق البيع 2</option>
-                                            <option value="3">فريق البيع 3</option>
+                                        <select class="form-select form-control custom-input" formControlName="teamId">
+                                            <option value="" disabled selected>قم باختيار فريق البيع</option>
+                                            <option *ngFor="let item of teamss " [value]="item.id">{{ item.name }}
+                                            </option>
+
                                         </select>
                                     </div>
                                 </div>
@@ -256,7 +249,7 @@
                                 <div class="form-group">
                                     <label for="field7 text-end">رقم طلب الاستلام
                                     </label>
-                                    <input type="date" id="field7"  class="form-control"
+                                    <input disabled type="text" id="field7"  class="form-control"
                                         placeholder="رقم طلب الاستلام" />
                                 </div>
                             </div>
@@ -266,16 +259,22 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="field8 text-end"> حالة الطلب</label>
-                                    <input type="text" id="field8" class="form-control"
+                                    <input disabled type="text" id="field8" class="form-control"
                                         placeholder="قم باختيار حالة الطلب" />
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="field9 text-end">مركز التكلفة
-                                    </label>
-                                    <input type="text" id="field9"  class="form-control"
-                                        placeholder="قم باختيار مركز التكلفة" />
+                                    <label class="form-label">مركز التكلفة</label>
+                                    <div class="input-group">
+                                        <select class="form-select form-control custom-input"
+                                            formControlName="costCenterId">
+                                            <option value="" disabled selected>قم باختيار مركز التكلفة</option>
+                                            <option *ngFor="let item of costCenterss " [value]="item.id">{{ item.name }}
+                                            </option>
+
+                                        </select>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -285,25 +284,20 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="location" class="form-label">مركز المورد</label>
-                                    <div class="input-group">
-                                        <select class="form-select form-control" id="location">
-                                            <option selected>قم بإختيار مركز المورد</option>
-                                            <option value="1">مركز المورد 1</option>
-                                            <option value="2">مركز المورد 2</option>
-                                            <option value="3">مركز المورد 3</option>
-                                        </select>
-                                    </div>
+                                    <input type="text" id="supplier" formControlName="supplier"  class="form-control"
+                                        placeholder="المورد" />
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="location" class="form-label">المستودع</label>
+                                    <label class="form-label">المستودع</label>
                                     <div class="input-group">
-                                        <select class="form-select form-control" id="location">
-                                            <option selected>قم بإختيار المستودع</option>
-                                            <option value="1">المستودع 1</option>
-                                            <option value="2">المستودع 2</option>
-                                            <option value="3">المستودع 3</option>
+                                        <select class="form-select form-control custom-input"
+                                            formControlName="warehouseId">
+                                            <option value="" disabled selected>قم باختيار المستودع</option>
+                                            <option *ngFor="let item of warehouses " [value]="item.id">{{item.name}}
+                                            </option>
+
                                         </select>
                                     </div>
                                 </div>
@@ -316,16 +310,17 @@
                             <div class="col-md-9">
                                 <label for="location" class="form-label">الموقع</label>
                                 <div class="input-group">
-                                    <select class="form-select" id="location">
+                                    <select class="form-select" id="location" formControlName="locationLinkIds">
                                         <option selected>قم بإختيار الموقع</option>
-                                        <option value="1">الموقع 1</option>
-                                        <option value="2">الموقع 2</option>
-                                        <option value="3">الموقع 3</option>
+                                        <option *ngFor="let item of locations" [value]="item.id">
+                                            {{item.locationName}},{{item.locationAddress}},{{item.latitude}},{{item.longitude}}
+                                        </option>
+
                                     </select>
                                 </div>
                             </div>
                             <div class="col-md-3 d-flex justify-content-start mt-3 mt-md-0">
-                                <button class="btn btn-primary locationButton" type="button">
+                                <button (click)="toggleCode()" class="btn btn-primary locationButton" type="button">
                                     <i class="fas fa-map-marker-alt"></i> أضف موقع
                                 </button>
                             </div>
@@ -341,37 +336,39 @@
                         </div>
 
                         <!-- Input Fields for Site Information -->
-                        <div class="row mb-4">
-                            <div class="col-md-3">
-                                <label for="siteName" class="form-label">اسم الموقع</label>
-                                <input type="text" class="form-control" id="siteName"
-                                    placeholder="قم بكتابة اسم الموقع">
+                        <div *ngIf="isCodeVisible">
+                            <div class="row mb-4">
+                                <div class="col-md-3">
+                                    <label for="siteName" class="form-label">اسم الموقع</label>
+                                    <input type="text" class="form-control" id="siteName"
+                                        placeholder="قم بكتابة اسم الموقع">
+                                </div>
+                                <div class="col-md-3">
+                                    <label for="line1" class="form-label">خط الطول</label>
+                                    <input type="text" class="form-control" id="line1" placeholder="قم بكتابة خط الطول">
+                                </div>
+                                <div class="col-md-3">
+                                    <label for="line2" class="form-label">خط العرض</label>
+                                    <input type="text" class="form-control" id="line2" placeholder="قم بكتابة خط العرض">
+                                </div>
+                                <div class="col-md-3">
+                                    <label for="line3" class="form-label">العنوان</label>
+                                    <input type="text" class="form-control" id="line3" placeholder="قم بكتابة خط العرض">
+                                </div>
                             </div>
-                            <div class="col-md-3">
-                                <label for="line1" class="form-label">خط الطول</label>
-                                <input type="text" class="form-control" id="line1" placeholder="قم بكتابة خط الطول">
-                            </div>
-                            <div class="col-md-3">
-                                <label for="line2" class="form-label">خط العرض</label>
-                                <input type="text" class="form-control" id="line2" placeholder="قم بكتابة خط العرض">
-                            </div>
-                            <div class="col-md-3">
-                                <label for="line3" class="form-label">العنوان</label>
-                                <input type="text" class="form-control" id="line3" placeholder="قم بكتابة خط العرض">
-                            </div>
-                        </div>
 
-                        <!-- Map Display Section -->
-                        <div class="row mb-4">
-                            <div class="col-md-12 text-center">
-                                <h5 class="mb-4">عرض الخريطة</h5>
-                                <div class="map-container"
-                                    style="border: 1px solid #ddd; border-radius: 8px; overflow: hidden;">
-                                    <iframe
-                                        src="https://maps.google.com/maps?q=2972%20Westheimer%20Rd,%20Santa%20Ana,%20Elmas%2089846&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                                        width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen=""
-                                        aria-hidden="false" tabindex="0">
-                                    </iframe>
+                            <!-- Map Display Section -->
+                            <div class="row mb-4">
+                                <div class="col-md-12 text-center">
+                                    <h5 class="mb-4">عرض الخريطة</h5>
+                                    <div class="map-container"
+                                        style="border: 1px solid #ddd; border-radius: 8px; overflow: hidden;">
+                                        <iframe
+                                            src="https://maps.google.com/maps?q=2972%20Westheimer%20Rd,%20Santa%20Ana,%20Elmas%2089846&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                                            width="100%" height="400" frameborder="0" style="border:0;"
+                                            allowfullscreen="" aria-hidden="false" tabindex="0">
+                                        </iframe>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -577,7 +574,7 @@
                         <!-- There was code here -->
 
                         <div class="col-md-6 mx-auto ">
-                            <button type="button" class="btn my-button3">
+                            <button type="submit" class="btn my-button3">
                                 اضافه
                                 <i class="fa-solid fa-plus"></i>
                             </button>
