--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -13,6 +13,9 @@
             margin: 0px 15px 35px auto;" src="../../../assets/images/ImageW.png">
 
         </li>
+
+        <hr class="gray-line" />
+
      
         <li><input class="form-control text-end search-input" type="search" placeholder="بحث في الكل"
             aria-label="Search" />
@@ -77,7 +80,7 @@
                   <ul class="nav nav-collapse sub-nav">
                     <li><a routerLink="/contacts"><span class="sub-item">جهات الإتصال</span></a></li>
                     <li><a routerLink="/clients"><span class="sub-item">العملاء</span></a></li>
-                    <li><a routerLink="#"><span class="sub-item">قوائم الأسعار</span></a></li>
+                    <li><a routerLink="/priceLists"><span class="sub-item">قوائم الأسعار</span></a></li>
                     <li><a routerLink="/Tag"><span class="sub-item">الوسم</span></a></li>
                     <li><a routerLink="/branchesAndLocationsOfClients"><span class="sub-item">مواقع وفروع
                           العملاء</span></a></li>
