--- a/src/app/components/sales/goods-voucher/goods-voucher.component.html
+++ b/src/app/components/sales/goods-voucher/goods-voucher.component.html
@@ -292,7 +292,7 @@
                                     <div class="input-group">
                                         <select class="form-select form-control custom-input" formControlName="teamId">
                                             <option value="" disabled selected>قم باختيار فريق البيع</option>
-                                            <option *ngFor="let item of teams " [value]="item.id">{{ item.name }}
+                                            <option *ngFor="let item of teamss " [value]="item.id">{{ item.name }}
                                             </option>
 
                                         </select>
@@ -324,7 +324,7 @@
                                         <select class="form-select form-control custom-input"
                                             formControlName="costCenterId">
                                             <option value="" disabled selected>قم باختيار مركز التكلفة</option>
-                                            <option *ngFor="let item of costCenters " [value]="item.id">{{ item.name }}
+                                            <option *ngFor="let item of costCenterss " [value]="item.id">{{ item.name }}
                                             </option>
 
                                         </select>
@@ -809,7 +809,7 @@
                                     <div class="input-group">
                                         <select class="form-select form-control custom-input" formControlName="teamId">
                                             <option value="" disabled selected>قم باختيار فريق البيع</option>
-                                            <option *ngFor="let item of teams " [value]="item.id">{{ item.name }}
+                                            <option *ngFor="let item of teamss " [value]="item.id">{{ item.name }}
                                             </option>
 
                                         </select>
@@ -841,7 +841,7 @@
                                         <select class="form-select form-control custom-input"
                                             formControlName="costCenterId">
                                             <option value="" disabled selected>قم باختيار مركز التكلفة</option>
-                                            <option *ngFor="let item of costCenters " [value]="item.id">{{ item.name }}
+                                            <option *ngFor="let item of costCenterss " [value]="item.id">{{ item.name }}
                                             </option>
 
                                         </select>
